zero-trust-gitops-platform/policies/tests/disallow-host-namespaces/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-namespaces-test
policies:
  - ../../workload-hardening/disallow-host-namespaces.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-host-namespaces
    rule: check-host-namespaces-and-privileged
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: disallow-host-namespaces
    rule: check-host-namespaces-and-privileged
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
